# moderncpp_vscode

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  ex1.cpp  ex2.cpp
include/linalg/: linalg.hpp
src/: CMakeLists.txt  linalg.cpp
tests/: CMakeLists.txt  linalg_test.cpp
vscode/: .clangd  Dockerfile  devcontainer.json  launch.json  project_settings.json  user_settings.json
